8007 want sys/stddef.h for offsetof and container_of macros Reviewed by: Gordon Ross <gordon.w.ross@gmail.com> Reviewed by: Josef 'Jeff' Sipek <jeffpc@josefsipek.net> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Dan McDonald <danmcd@omniti.com> Reviewed by: Yuri Pankov <yuri.pankov@gmail.com> Approved by: Hans Rosenfeld <hans.rosenfeld@joyent.com>